Improved the CodeMirror previewer

--- a/smartImage/demo/index.html
+++ b/smartImage/demo/index.html
@@ -36,7 +36,7 @@
 	
 	<h2>Demo - See How It Works</h2>
 	
-	<iframe id="preview"></iframe>
+	<div id="preview-container"><div id="preview"></div></div>
 	
 	<h2>Code - Fiddle With This</h2>
 <!-- <<<<<<<<<<<< CODE EDITOR START >>>>>>>>>>>> -->
@@ -55,6 +55,8 @@
 	</head>
 	<body>
 		<div id="demo"></div>
+		
+		<img src="res/one-piece.jpg" />
 	
 		<script type="text/javascript">
 			$("#demo").smartImage();
