--- a/base/demo/index.html
+++ b/base/demo/index.html
@@ -36,7 +36,7 @@
 	
 	<h2>Demo - See How It Works</h2>
 	
-	<iframe id="preview"></iframe>
+	<div id="preview-container"><div id="preview"></div></div>
 	
 	<h2>Code - Fiddle With This</h2>
 <!-- <<<<<<<<<<<< CODE EDITOR START >>>>>>>>>>>> -->
