Converted the preview container from a div to iframe… again...

--- a/base/demo/index.html
+++ b/base/demo/index.html
@@ -36,8 +36,8 @@
 	
 	<h2>Demo - See How It Works</h2>
 	
-	<div id="preview-container"><div id="preview"></div></div>
-	
+	<iframe id="preview"></iframe>
+
 	<h2>Code - Fiddle With This</h2>
 <!-- <<<<<<<<<<<< CODE EDITOR START >>>>>>>>>>>> -->
 <form id="code-container"><textarea id="code" name="code"><!DOCTYPE html>
