Restructured the directory structure again

--- a/smartImage/demo/basic.html
+++ b/smartImage/demo/basic.html
@@ -54,13 +54,13 @@
 		</style>
 	</head>
 	<body>
-		<img id="demo" src="res/one-piece.jpg" />
+		<img id="demo" src="assets/one-piece.jpg" />
 	
 		<script type="text/javascript">
 			$("#demo").smartImage({
 				width: 194,
 				height: 293,
-				imgSrc: "res/one-piece.jpg"
+				imgSrc: "assets/one-piece.jpg"
 			});
 		</script>
 	
